--- a/assets-src/components/Modal.scss
+++ b/assets-src/components/Modal.scss
@@ -28,7 +28,7 @@
         overflow-wrap: break-word;
         width: 100%;
         max-width: 600px;
-        max-height: 400px;
+        max-height: 600px;
         margin: 0 auto;
         padding: 40px 20px;
         background-color: $white;
